# vscode-c-cpp-apple-silicon

./: .clang-format  CMakeLists.txt  README.md  main.cpp
